--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>SHREYA BHOWMICK</title>
   <link rel="stylesheet" href="My Site/styles.css">
-  <link rel="icon" href="My Site/favicon (1).ico">
+  <link rel="icon" href="favicon (1).ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lovers+Quarrel&family=Marck+Script&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Montserrat:ital,wght@0,400;0,500;1,300;1,400;1,500&family=Niconne&family=Rouge+Script&family=Sacramento&display=swap"
@@ -14,17 +14,17 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="My Site/images/cloud.png" alt="cloud-image">
+    <img class="top-cloud" src="cloud.png" alt="cloud-image">
     <h1>I'm Shreya.</h1>
     <h2 class="heading">
       a <span>web</span> developer enthusiast.
     </h2>
-    <img class="bottom-cloud" src="My Site/images/cloud.png" alt="cloud-image">
-    <img src="My Site/images/mountain.png" alt="mountain-image">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
+    <img src="mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="me" src="C:\Users\KIIT\Downloads\SEMESTER 3-8 INFO\webdev preparation\angela course\HTML-PESONAL WEB DEVLOPERS SITE (INTERMEDIATE CSS)\My Site\circle-cropped.png" alt="shreya-personal-img">
+      <img class="me" src="circle-cropped.png" alt="shreya-personal-img">
       <h2>Hello.</h2>
       <p class="myself">I am a sophmore in college who is into competitive coding and problem solving.
         I am a student at <strong><a href="https://kiit.ac.in/"> Kalinga Institute of Technology</a></strong></p>
@@ -33,17 +33,17 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="design" src="C:\Users\KIIT\Downloads\web-development (2).png" alt="design skill">
+        <img class="design" src="web-development (2).png" alt="design skill">
         <h3>Design & Development</h3>
         <p>From the age of twelve I started learning how to code because I always wanted to make android applications. Over time, I gained a great deal of experience designing and developing mobile and web applications.</p>
       </div>
       <div class="skill-row">
-        <img class="music" src="C:\Users\KIIT\Downloads\guitar.png" alt="music-img">
+        <img class="music" src="guitar.png" alt="music-img">
         <h3>Music.</h3>
         <p class="tip">I started learning Hindustani classical music at a tender age of six. Over the years, I got into new genres of music, from Indian pop, rock, semi-classical to Western rock, pop, R&B and country music.</p>
       </div>
       <div class="skill-row">
-        <img class="art" src="C:\Users\KIIT\Downloads\artist.png" alt="art-img">
+        <img class="art" src="artist.png" alt="art-img">
         <h3>Art.</h3>
         <p>I am a skilled sketch artist and an amateur painter.I like to observe beautiful imperfections in people and try to sketch them on my canvas.</p>
       </div>
