--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>SHREYA BHOWMICK</title>
-  <link rel="stylesheet" href="My Site/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="favicon (1).ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
